Connect to Pymongo

--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "86cf5b76",
+   "id": "2c38bdd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "77dec9e2",
+   "id": "9e4479e6",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7e43c290",
+   "id": "574f117d",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e8ff9824",
+   "id": "95034a44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b38069ab",
+   "id": "fbb59417",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "90ba954b",
+   "id": "0e91692f",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "117153af",
+   "id": "7bbf2a37",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8515fe3f",
+   "id": "921cf4bc",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79f72ae3",
+   "id": "2ea75152",
    "metadata": {},
    "source": [
     "### Featured Images"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "20a73830",
+   "id": "0daa0bdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3efcd990",
+   "id": "0d51fea4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "243f1ad2",
+   "id": "102bf234",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "08932313",
+   "id": "69df5a7d",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a913c776",
+   "id": "77eafcac",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "606d7d5a",
+   "id": "9de07d68",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "dd85b01a",
+   "id": "3addf0d3",
    "metadata": {},
    "outputs": [
     {
@@ -366,8 +366,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "6b0a89be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "272ab2ea",
+   "id": "cbdcd006",
    "metadata": {},
    "outputs": [],
    "source": []
